[package]
authors = ['Andy Bell <andyjsbell@gmail.com>']
description = 'A DEX aggregator pallet'
edition = '2018'
homepage = 'https://github.com/andyjsbell/pallet-dex-aggregator'
license = 'Unlicense'
name = 'pallet-dex-aggregator'
repository = 'https://github.com/andyjsbell/pallet-dex-aggregator'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version="3.0.0", default-features = false }
sp-std = { version="3.0.0", default-features = false }
frame-support = { version="3.0.0", default-features = false }
frame-system = { version="3.0.0", default-features = false }
sp-io = { default-features = false, version = "3.0.0" }
sp-core = { default-features = false, version = "3.0.0" }

[dev-dependencies]
sp-core = { default-features = false, version = "3.0.0" }
sp-io = { default-features = false, version = "3.0.0" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
]