[package]
name = "pallet-dex-aggregator-rpc-runtime-api"
version = "0.1.0"
authors = ["Andy Bell <andyjsbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-dex-aggregator = { version = "0.1.0", default-features = false, path = "../../../pallet-dex-aggregator" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false, path = "../../../../primitives/api" }

[features]
default = ["std"]
std = [
    "pallet-dex-aggregator/std",
]
